update index.html with new css reference

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" href="etchASketch.css">
+    <link rel="stylesheet" href="sketch.css">
 </head>
 <body>
     <div id="header">
